添加hzsp测试环境路径

--- a/vhost/test/10.1.15.50.conf
+++ b/vhost/test/10.1.15.50.conf
@@ -50,4 +50,9 @@ server {
     location /toyspot-webtv {
     	proxy_pass    http://192.168.200.18:11041;
     }
+    
+    #恰恰广场舞
+    location /hzsp_test {
+        proxy_pass    http://192.168.200.24:8080;
+    }
 }
