--- a/vhost/test/10.1.15.50.conf
+++ b/vhost/test/10.1.15.50.conf
@@ -52,7 +52,7 @@ server {
     }
     
     #恰恰广场舞
-    location /hzsp_test {
+    location /hzsp {
         proxy_pass    http://192.168.200.24:8080;
     }
 }
