--- a/vhost/test/10.1.15.50.conf
+++ b/vhost/test/10.1.15.50.conf
@@ -53,6 +53,6 @@ server {
     
     #恰恰广场舞
     location /hzsp {
-        proxy_pass    http://192.168.200.24:8080;
+        proxy_pass    http://192.168.200.24:8080/hzsp;
     }
 }
