--- a/vhost/test/10.1.15.50.conf
+++ b/vhost/test/10.1.15.50.conf
@@ -2,7 +2,6 @@
 
 server {
     listen  8000;
-#    listen	11000;
     server_name  10.1.15.50;
     
     #静态资源
@@ -12,7 +11,7 @@ server {
     
     #上传图片
     location /up {
-        root    /home/www/test;
+        root    /home/www/test/up_;
     }
     
     location /html {
