修改新的up路径

--- a/vhost/test/10.1.15.50.conf
+++ b/vhost/test/10.1.15.50.conf
@@ -11,7 +11,7 @@ server {
     
     #上传图片
     location /up {
-        root    /home/www/test/up_;
+        root    /home/www/test/up_fs;
     }
     
     location /html {
