修改使用glusterfs后的/test映射root路径

--- a/vhost/test/10.1.15.50.conf
+++ b/vhost/test/10.1.15.50.conf
@@ -6,12 +6,14 @@ server {
     
     #静态资源
     location /static {
-        root    /home/www/test;
+#        root    /home/www/test;
+		root    /home/fs/test;
     }
     
     #上传图片
     location /up {
-        root    /home/www/test/up_fs;
+#        root    /home/www/test/up_fs;
+		root    /home/fs/test;
     }
     
     location /html {
