--- a/vhost/test/test.manage.gxwsxx.com.conf
+++ b/vhost/test/test.manage.gxwsxx.com.conf
@@ -7,13 +7,15 @@ server {
     
     #静态资源
     location /static {
-        root    /home/www/test;
+#        root    /home/www/test;
+        root    /home/fs/test;
         add_header  Access-Control-Allow-Origin *;
     }
     
     #上传图片
     location /up {
-        root    /home/www/test;
+#        root    /home/www/test;
+		root    /home/fs/test;
     }
     
     location / {
