--- a/vhost/test/test.web.gxwsxx.com.conf
+++ b/vhost/test/test.web.gxwsxx.com.conf
@@ -5,7 +5,8 @@ server {
     server_name     test.web.gxwsxx.com;
     
     location /up {
-        root    /home/www/test;
+#        root    /home/www/test;
+		root    /home/fs/test;
     }
     
     location / {
