修改/glusterfs_client/test路径

--- a/vhost/test/10.1.15.50.conf
+++ b/vhost/test/10.1.15.50.conf
@@ -7,13 +7,13 @@ server {
     #静态资源
     location /static {
 #        root    /home/www/test;
-		root    /home/fs/test;
+		root    /glusterfs_client/test;
     }
     
     #上传图片
     location /up {
 #        root    /home/www/test/up_fs;
-		root    /home/fs/test;
+		root    /glusterfs_client/test;
     }
     
     location /html {
