--- a/vhost/test/test.web.gxwsxx.com.conf
+++ b/vhost/test/test.web.gxwsxx.com.conf
@@ -6,7 +6,7 @@ server {
     
     location /up {
 #        root    /home/www/test;
-		root    /home/fs/test;
+		root    /glusterfs_client/test;
     }
     
     location / {
