--- a/vhost/test/test.manage.gxwsxx.com.conf
+++ b/vhost/test/test.manage.gxwsxx.com.conf
@@ -8,14 +8,14 @@ server {
     #静态资源
     location /static {
 #        root    /home/www/test;
-        root    /home/fs/test;
+        root    /glusterfs_client/test;
         add_header  Access-Control-Allow-Origin *;
     }
     
     #上传图片
     location /up {
 #        root    /home/www/test;
-		root    /home/fs/test;
+		root    /glusterfs_client/test;
     }
     
     location / {
