--- a/vhost/real/monitor.gxwsxx.com.conf
+++ b/vhost/real/monitor.gxwsxx.com.conf
@@ -5,8 +5,9 @@ server {
     server_name  monitor.gxwsxx.com;
     
     #接收监控请求
-    location /monitor {
+    location /monitor/web-notice.html {
         root    /home/www/real;
+        access_log logs/web-notice.access.log;
     }
     
 }
