修改允许post请求访问html资源

--- a/vhost/real/monitor.gxwsxx.com.conf
+++ b/vhost/real/monitor.gxwsxx.com.conf
@@ -4,6 +4,8 @@ server {
     listen  8001;
     server_name  monitor.gxwsxx.com;
     
+    error_page  405 =200 $uri;
+    
     #接收监控请求
     location /monitor/web-notice.html {
         root    /home/www/real;
