--- a/vhost/real/10.1.15.50.conf
+++ b/vhost/real/10.1.15.50.conf
@@ -38,10 +38,15 @@ server {
     location /toysearn-webtv {
         proxy_pass    http://192.168.200.29:11011;
     }
-    location /toysegg-webtv {
-    	proxy_pass    http://192.168.200.29:11021;
-    }
-    location /toyspot-webtv {
-    	proxy_pass    http://192.168.200.29:11031;
-    }
+#    location /toysegg-webtv {
+#    	proxy_pass    http://192.168.200.29:11021;
+#    }
+#    location /toyspot-webtv {
+#    	proxy_pass    http://192.168.200.29:11031;
+#    }
+
+	#manage-envelope
+	location /manage-envelope {
+		proxy_pass	http://192.168.200.29:10020;
+	}
 }
