调整测试环境static和up目录

--- a/vhost/test/10.1.15.50.conf
+++ b/vhost/test/10.1.15.50.conf
@@ -3,38 +3,38 @@
 server {
     listen  8000;
     server_name  10.1.15.50;
-    
+
     #静态资源
     location /static {
-#        root    /home/www/test;
-		root    /glusterfs_client/test;
+        root    /home/www/test;
+#		root    /glusterfs_client/test;
     }
-    
+
     #上传图片
     location /up {
-#        root    /home/www/test/up_fs;
-		root    /glusterfs_client/test;
+        root    /home/www/test;
+#		root    /glusterfs_client/test;
     }
-    
+
     location /html {
         proxy_pass http://192.168.200.16;
     }
-    
+
     #web类型项目
     location ~ ^/web-.* {
         proxy_pass  http://192.168.200.17:10010;
     }
-    
+
     #微信项目
     location /wxpay {
         proxy_pass  http://192.168.200.17:10010;
     }
-    
+
     #工行营业厅
     location /gxws-icbc {
         proxy_pass  http://192.168.200.17:10010;
     }
-    
+
     #toys项目
     location /toysearn-webtv {
         proxy_pass    http://192.168.200.18:11021;
@@ -45,7 +45,7 @@ server {
     location /toyspot-webtv {
     	proxy_pass    http://192.168.200.18:11041;
     }
-    
+
     #恰恰广场舞
     location /hzsp {
         proxy_pass    http://192.168.200.24:8080/hzsp;
