修改测试环境的上传路径

--- a/vhost/test/10.1.15.50.conf
+++ b/vhost/test/10.1.15.50.conf
@@ -12,7 +12,7 @@ server {
 
     #上传图片
     location /up {
-        root    /home/www/test;
+        root    /home/www/test/test;
 #		root    /glusterfs_client/test;
     }
 
