乐众测试环境

--- a/vhost/test/10.1.15.50.conf
+++ b/vhost/test/10.1.15.50.conf
@@ -50,4 +50,8 @@ server {
     location /hzsp {
         proxy_pass    http://192.168.200.24:8080/hzsp;
     }
+
+    location ~ ^/lezcashier-.* {
+        proxy_pass  http://192.168.200.17:12010;
+    }
 }
